# convolutional-neural-network

./: Cargo.toml  LICENSE  README.md
examples/cat_dog_classification/: image_compiler.rs  main.rs  test.rs  trainer.rs  trainer_parallel.rs
src/: activations.rs  convolutional_layer.rs  errors.rs  fully_connected_layer.rs  initialization.rs  layer.rs  lib.rs  neural_network.rs  nn_error.rs  pooling_layer.rs  tests.rs  util.rs
