[package]
name = "convolutional_neural_network"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "0.9.0"
rand_distr = "0.5.1"
serde = { version = "1.0.219", features = ["derive"] }

[dev-dependencies]
bincode = { version = "2.0.1", default-features = false, features = ["serde", "std"] }
image = "0.25.6"
